...
            children: <Widget>[
              Text(
                userName,
                style: TextStyle(fontSize: 20),
              ),
              PopupMenuButton(
                key: Key('menuButtonKey'),
                //color: mainColor,
                offset: Offset(0, 50),
                icon: Icon(
                  Icons.account_circle_outlined,
                  color: mainColor,
                ),
                iconSize: 40,
                itemBuilder: (context) => [
                  PopupMenuItem(
                      key: Key('signOutButtonKey'),
                      onTap: () => context.go('/'),
                      child: Text('Sign out')),
                  PopupMenuItem(
                      key: Key('accountMenuButtonKey'),
                      onTap: () {
                        print('Session Token:' + SessionTokenContoller().get());
                        context.go('/organizerPanel/account');
                      },
                      child: Text('Account')),
                  PopupMenuItem(
...
