...
                  decoration: const InputDecoration(
                    icon: Icon(Icons.person),
                  ),
                ),
              ),
              TextButton(
                key: Key('accountEditButtonKey'),
                style: TextButton.styleFrom(
                    foregroundColor: Colors.white,
                    backgroundColor: mainColor,
                    padding: EdgeInsets.all(15)),
                onPressed: () async {
                  _editMode = true;
...
                  },
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: TextFormField(
                  key: Key('accountEditUsernameKey'),
                  readOnly: _editMode ? false : true,
                  controller: _usernameTextController,
                  decoration: const InputDecoration(
                      icon: Icon(Icons.person),
                      border: OutlineInputBorder(),
                      hintText: 'Choose a username'),
...
                          backgroundColor: Colors.red,
                          padding: EdgeInsets.all(15)),
                      onPressed: () =>
                          deleteAccount(organizerController, organizerData),
                      child: Text('Delete account')),
                  TextButton(
                    key: Key('accountSaveChangesButtonKey'),
                    style: TextButton.styleFrom(
                        foregroundColor: Colors.white,
                        backgroundColor: Colors.green,
                        padding: EdgeInsets.all(15)),
                    onPressed: () async {
                      if (_formKey.currentState!.validate()) {
...
