...
              //   backendUpdate: updateBackend(eventsController,
              //       organizerController, categoriesController),
              // ),
              HighlightButton(
                  Key('SignUpPageKey'), 'Sign Up', () => context.go('/signUp')),
              HighlightButton(
                  Key('SignInPageKey'), 'Sign In', () => context.go('/signIn')),
            ],
          )
        ],
      ),
    );
  }
...
